@@ -135,7 +135,7 @@ static const struct file_operations g_canops =
  ****************************************************************************/
 
 /****************************************************************************
- * Name: can_dlc2bytes and can_bytes2dlc
+ * Name: can_dlc2bytes
  *
  * Description:
  *   In the CAN FD format, the coding of the DLC differs from the standard
@@ -145,11 +145,10 @@ static const struct file_operations g_canops =
  *   in the range 12 to 64.
  *
  * Input Parameter:
- *   dlc    - the DLC to convert to a byte count, OR
- *   nbytes - the byte count to convert to a DLC
+ *   dlc    - the DLC value to convert to a byte count
  *
  * Returned Value:
- *   The converted value
+ *   The number of bytes corresponding to the DLC value.
  *
  ****************************************************************************/
 
@@ -183,6 +182,24 @@ static uint8_t can_dlc2bytes(uint8_t dlc)
 
   return dlc;
 }
+
+/****************************************************************************
+ * Name: can_bytes2dlc
+ *
+ * Description:
+ *   In the CAN FD format, the coding of the DLC differs from the standard
+ *   CAN format. The DLC codes 0 to 8 have the same coding as in standard
+ *   CAN.  But the codes 9 to 15 all imply a data field of 8 bytes with
+ *   standard CAN.  In CAN FD mode, the values 9 to 15 are encoded to values
+ *   in the range 12 to 64.
+ *
+ * Input Parameter:
+ *   nbytes - the byte count to convert to a DLC value
+ *
+ * Returned Value:
+ *   The encoded DLC value corresponding to at least that number of bytes.
+ *
+ ****************************************************************************/
 
 #if 0 /* Not used */
 static uint8_t can_bytes2dlc(FAR struct sam_can_s *priv, uint8_t nbytes)
